# alloy-tuple-encoding

./: .gitignore  Cargo.toml  README.md
contracts/test/: MyContract.t.sol
src/: lib.rs
